[MODINV-1092] Ensure that OCLC 035 entries display on separate lines of underlying MARC